[package]
name = "vertix-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-webfinger = "0.4.1"
activitystreams = "0.6.2"
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.9"
log = "0.4"
bb8 = "0.8.0"
lapin = "2.1.1"
vertix-model = { path = "../vertix-model" }
vertix-comm = { path = "../vertix-comm" }

[dependencies.aragog]
#version = "0.17"
git = "https://gitlab.com/qonfucius/aragog"
