[package]
name = "vertix-app-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vertix-model = { path = "../vertix-model" }
vertix-comm = { path = "../vertix-comm" }
async-trait = "0.1"
url = "2.3.1"
urlencoding = "2.1.2"
thiserror = "1.0"
log = "0.4"
lapin = "2.1.1"
regex = "1.7"
lazy_static = "1.4.0"
reqwest = "0.11.13"
actix-webfinger = "0.4.1"

[dependencies.aragog]
#version = "0.17"
git = "https://gitlab.com/qonfucius/aragog"
