[package]
name = "vertix-comm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.1.1"
log = "0.4"
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
activitystreams = "0.6.2"
vertix-model = { path = "../vertix-model" }

[dependencies.aragog]
#version = "0.17"
git = "https://gitlab.com/qonfucius/aragog"

[dev-dependencies]
actix-rt = "2.7.0"
tokio = "1.22.0"
anyhow = "1.0"
test-log = "0.2"
env_logger = "0.9"
tracing = { version = "0.1", features = ["log"] }
