[package]
name = "vertix-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
bb8 = "0.8.0"
async-trait = "0.1"
log = "0.4"

[dependencies.aragog]
#version = "0.17"
git = "https://gitlab.com/qonfucius/aragog"

[dev-dependencies]
actix-rt = { version = "2.7.0" }
anyhow = "1.0"
