[package]
name = "vertix-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vertix-comm = { path = "../vertix-comm" }
vertix-model = { path = "../vertix-model" }
vertix-app-common = { path = "../vertix-app-common" }
serde = "1.0"
serde_json = "1.0"
actix-rt = "2.7.0"
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
lapin = "2.1.1"
futures = "0.3"
bb8 = "0.8.0"
activitystreams = "0.6.2"
url = "2.3.1"
reqwest = "0.11.13"

[dependencies.aragog]
#version = "0.17"
git = "https://gitlab.com/qonfucius/aragog"
